[project]
name = "stock-analysis"
version = "1.0.0"
description = "Fundamental analysis of companies based on 'The Intelligent Investor' book from Benjamin Graham."
authors = [
    { name = "Vincent Réau", email = "vincent.reau1@gmail.com"},]
maintainers = [
    { name = "Vincent Réau", email = "vincent.reau1@gmail.com"},]
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "numpy >= 1.26.4",
    "pandas >= 2.2.2",
    "setuptools >=70.0.0",
    "yfinance == 0.2.58",
    "chardet >= 5.2.0",
    "streamlit >= 1.38.0",
    "curl-cffi >= 0.10.0",
    "tqdm >= 4.67.1",
    "plotly >= 6.0.1",
    "scikit-learn >= 1.6.1",
    "fpdf2 >= 2.8.3",
    "matplotlib (>=3.10.3,<4.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[project.urls]
homepage = "https://stockanalysis-dd27.onrender.com"
repository = "https://github.com/Vince4513/StockAnalysis"
"Bug Tracker" = "https://github.com/Vince4513/StockAnalysis/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
